templates home images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </header>
 
 <main>
-    <article>
+    <section>
         <div>
             <h1>Over mij</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
@@ -41,11 +41,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
         </div>
-        <img src="assets/images/articles/firstImage.png" alt="">
-    </article>
+        <img src="assets/images/templateHome2.png" alt="">
+    </section>
 
-    <article>
-        <img src="assets/images/articles/firstImage.png" alt="">
+    <section>
+        <img src="assets/images/templateHome.png" alt="">
         <div>
             <h1>Studies</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
@@ -54,10 +54,16 @@
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
+                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
+                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
+                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
         </div>
-    </article>
+    </section>
 
-    <article>
+    <section>
         <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
@@ -66,8 +72,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
         </div>
-        <img src="assets/images/articles/firstImage.png" alt="">
-    </article>
+        <img src="assets/images/templateHome2.png" alt="">
+    </section>
 </main>
 
 <script src="assets/javascript/generateSidebarMenu.js"></script>
