Opbouw artikel toevoegen

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     <section>
         <div>
             <h1>Over mij</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
-                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
+            <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001 en samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
@@ -77,7 +76,6 @@
 </main>
 
 <script src="assets/javascript/generateSidebarMenu.js"></script>
-<script src="assets/javascript/generateArticleList.js"></script>
 <script src="assets/javascript/require.js"></script>
 </body>
 </html>
