Home mobile friendly

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <img src="assets/images/templateHome2.png" alt="">
     </section>
 
-    <section>
-        <img src="assets/images/templateHome.png" alt="">
+    <section class="reverse">
         <div>
             <h1>Studies</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
@@ -60,6 +59,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
                 neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
         </div>
+        <img src="assets/images/templateHome.png" alt="">
     </section>
 
     <section>
