--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>In mijn vrije tijd hou ik gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en in januari 2022 ook een digitale piano.</p>
             <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een uitgaander, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
         </div>
-        <img src="assets/images/templateHome2.png" alt="">
+        <img src="assets/images/over-mij.png" alt="">
     </section>
 
     <section class="reverse">
@@ -48,19 +48,21 @@
             <p>Toen ik in het 5e middelbaar naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeeher beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
             <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren, moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
         </div>
-        <img src="assets/images/templateHome.png" alt="">
+        <img src="assets/images/studies.png" alt="">
     </section>
 
     <section>
         <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
-                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
-                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error exercitationem ipsam maiores molestias
-                neque quasi sed, sit ut. Animi at autem deserunt fuga libero mollitia odit? Assumenda, cupiditate, eligendi.</p>
+            <h1>Ervaringen</h1>
+            <h2>Stages</h2>
+            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template dat was opgesteld door de designer</p>
+            <p>Momenteel volg ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren.</p>
+            <h2>Vakantiejobs</h2>
+            <p>Mijn eerste ervaring in het werkveld is toen ik op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel.<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
+            <p>In de zomer heb ik een maand bij Bemoran BVBA gaan werken. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het harde werk en de temperatuur die tot 40°C steeg, werd het zelf even zwart voor mijn ogen.</p>
+            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeningen<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> van Kortrijk gewerkt. Als ik de ochtend shift had, dan begon mijn dag met het klaarmaken van de maaltijden aan de lopende band. De eerste dag was ik heel hard verschoten van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
         </div>
-        <img src="assets/images/templateHome2.png" alt="">
+        <img src="assets/images/ervaringen.png" alt="">
     </section>
 </main>
 
