Opbouw website technieken

--- a/artikels.html
+++ b/artikels.html
@@ -28,7 +28,7 @@
     </div>
 
     <p>Artikels</p>
-    <a href="index.html">Jarno Vandeburie</a>
+    <p><a href="index.html">Jarno Vandeburie</a></p>
 </header>
 
 <main>
