--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <p>Home</p>
-    <a href="index.html">Jarno Vandeburie</a>
+    <p><a href="index.html">Jarno Vandeburie</a></p>
 </header>
 
 <main>
@@ -55,12 +55,12 @@
         <div>
             <h1>Ervaringen</h1>
             <h2>Stages</h2>
-            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template dat was opgesteld door de designer</p>
-            <p>Momenteel volg ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren.</p>
+            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template dat was opgesteld door de designer</p>
+            <p>Momenteel volg ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren.</p>
             <h2>Vakantiejobs</h2>
-            <p>Mijn eerste ervaring in het werkveld is toen ik op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel.<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
-            <p>In de zomer heb ik een maand bij Bemoran BVBA gaan werken. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het harde werk en de temperatuur die tot 40°C steeg, werd het zelf even zwart voor mijn ogen.</p>
-            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeningen<img src="assets/images/info-icon.png" alt="i" title="Click to go to the website"></a> van Kortrijk gewerkt. Als ik de ochtend shift had, dan begon mijn dag met het klaarmaken van de maaltijden aan de lopende band. De eerste dag was ik heel hard verschoten van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
+            <p>Mijn eerste ervaring in het werkveld is toen ik op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
+            <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot 40°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
+            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeningen</a> van Kortrijk gewerkt. Als ik de ochtend shift had, dan begon mijn dag met het klaarmaken van de maaltijden aan de lopende band. De eerste dag was ik heel hard verschoten van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
         </div>
         <img src="assets/images/ervaringen.png" alt="">
     </section>
