--- a/info_artikel.html
+++ b/info_artikel.html
@@ -26,10 +26,13 @@
         </div>
     </div>
 
-    <a href="index.html">Jarno Vandeburie</a>
+    <p><a href="index.html">Jarno Vandeburie</a></p>
 </header>
 
 <main>
+    <section id="back">
+        <a href="artikels.html">Terug</a>
+    </section>
     <section id="articles">
 
     </section>
