Chronologisch + template extra artikelen

--- a/info_artikel.html
+++ b/info_artikel.html
@@ -33,7 +33,7 @@
     <section id="back">
         <a href="artikels.html">Terug</a>
     </section>
-    <section id="articles">
+    <section id="article">
 
     </section>
 </main>
