terug-knop volledig klikbaar

--- a/artikelen.html
+++ b/artikelen.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/general.css"/>
     <link rel="stylesheet" href="assets/css/articles.css"/>
     <link rel="stylesheet" href="assets/css/filtermenu.css"/>
-    <title>Artikels</title>
+    <title>Artikelen</title>
 </head>
 <body>
 
