--- a/info_artikel.html
+++ b/info_artikel.html
@@ -31,7 +31,7 @@
 
 <main>
     <section id="back">
-        <a href="artikels.html">Terug</a>
+        <a href="artikelen.html">Terug</a>
     </section>
     <section id="article">
 
