laatste commit laptop sofatech

--- a/opbouw.html
+++ b/opbouw.html
@@ -40,9 +40,9 @@
 
         <h2>JavaScript</h2>
         <p>Het navigatiemenu wordt gegenereerd aan de hand van JavaScript. Dit is gedaan zodat het makkelijker is om nieuwe paginas toe te voegen. Zo moet er niet in elke HTML-file de header worden aangepast.</p>
-        <p>Ook het genereren van de artikelen gebeurt aan de hand van JavaScript. De artikelen worden gelezen uit een file waar ze opgeslagen staan in een JSON-formaat. De code overleest elk element en plaatst op de juiste plaats in het artikel. De afbeeldingen worden ook uit de file uitgelezen en dan uit een folder gehaald.
+        <p>Ook het genereren van de artikelen gebeurt aan de hand van JavaScript. De artikelen worden gelezen uit een file waar ze opgeslagen staan in een JSON-formaat. De code overleest elk element en plaatst deze op de juiste plaats in het artikel. De afbeeldingen worden ook uit de file uitgelezen en dan uit een folder gehaald.
         <br>Een kleine extra is dat er ook een optie is om de artikelen compact weer te geven. Deze knop geeft alle artikelen een klasse waardoor sommige elementen verborgen worden.</p>
-        <p>Om het juiste artikel weer te geven als je op een titel klikt, wordt de titel als parameter meegegeven in de URL en wordt dan in de JSON naar het juiste artikel gezocht. Zodat de parameter wat leesbaarder zou worden voor de eindgebruiker, worden alle spaties vervangen door een '~'. Dit zorgt er voor dat dit teken niet mag gebruikt worden in de titel van een artikel, maar dat leek mij geen probleem.</p>
+        <p>Om het juiste artikel weer te geven als je op een titel klikt, wordt de titel als parameter meegegeven in de URL en wordt dan in de JSON naar het juiste artikel gezocht. Zodat de parameter wat leesbaarder zou worden voor de eindgebruiker, worden alle spaties vervangen door een tilde. Dit zorgt er voor dat dit teken niet mag gebruikt worden in de titel van een artikel, maar dat leek mij geen probleem.</p>
 
         <h2>JSON</h2>
         <p>Zoals aangehaald in het hoofdstukje hierboven, wordt er gebruik gemaakt van JSON om de artikelen in te lezen. Alle belangrijke elementen hebben hun eigen parameters. Er is ook een optie voor een beschrijving toe te voegen aan de artikelen. Dit is een samenvatting van het artikel en dit wordt alleen weergegeven op het scherm met alle artikelen.</p>
