--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section>
         <div>
             <h1>Over mij</h1>
-            <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001 en samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
-            <p>In mijn vrije tijd hou ik gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en in januari 2022 ook een digitale piano.</p>
+            <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001, en ik ben samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
+            <p>In mijn vrije tijd hou ik gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en op mijn 21ste ook een digitale piano.</p>
             <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een uitgaander, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
         </div>
         <img src="assets/images/over-mij.png" alt="">
@@ -45,7 +45,7 @@
         <div>
             <h1>Studies</h1>
             <p>In het middelbaar ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan economie</p>
-            <p>Toen ik in het 5e middelbaar naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeeher beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
+            <p>Toen ik in het 5e middelbaar naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
             <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren, moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
         </div>
         <img src="assets/images/studies.png" alt="">
