--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div>
             <h1>Over mij</h1>
             <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001, en ik ben samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
-            <p>In mijn vrije tijd hou ik gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en op mijn 21ste ook een digitale piano.</p>
+            <p>In mijn vrije tijd hou ik van gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en op mijn 21ste ook een digitale piano.</p>
             <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een uitgaander, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
         </div>
         <img src="assets/images/over-mij.png" alt="">
