--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Over mij</h1>
             <p>Ik ben Jarno Vandeburie, geboren op 2 januari 2001, en ik ben samen met mijn 2 jongere broers groot gebracht in Zwevegem, West-Vlaanderen.</p>
             <p>In mijn vrije tijd hou ik gaming en streaming. Op mijn 16e verjaardag heb ik een gitaar gekocht en op mijn 21ste ook een digitale piano.</p>
-            <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een uitgaander, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
+            <p>Qua persoonlijkheid ben ik eerder wat terughoudend, al durf ik wel op te staan als ik het gevoel heb dat er iets niet juist is. Ik ben ook niet echt een fuifbeest, een leuke film- of gameavond met vrienden doet mij meer plezier.</p>
         </div>
         <img src="assets/images/over-mij.png" alt="">
     </section>
@@ -44,8 +44,8 @@
     <section class="reverse">
         <div>
             <h1>Studies</h1>
-            <p>In het middelbaar ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan economie</p>
-            <p>Toen ik in het 5e middelbaar naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
+            <p>In het secundair ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan economie</p>
+            <p>Toen ik in het 5e secundair naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
             <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren, moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
         </div>
         <img src="assets/images/studies.png" alt="">
@@ -55,12 +55,12 @@
         <div>
             <h1>Ervaringen</h1>
             <h2>Stages</h2>
-            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template dat was opgesteld door de designer</p>
+            <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template die was opgesteld door de designer</p>
             <p>Momenteel volg ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren.</p>
             <h2>Vakantiejobs</h2>
-            <p>Mijn eerste ervaring in het werkveld is toen ik op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
-            <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot 40°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
-            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeningen</a> van Kortrijk gewerkt. Als ik de ochtend shift had, dan begon mijn dag met het klaarmaken van de maaltijden aan de lopende band. De eerste dag was ik heel hard verschoten van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
+            <p>Op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
+            <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot 35°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
+            <p>Als laatste vakantiejob heb ik in het <a href="https://www.azgroeninge.be/nl" target="_blank">AZ Groeninge</a> van Kortrijk gewerkt. Als ik de ochtendshift had, dan begon mijn dag met het klaarmaken van de maaltijden aan een lopende band. De eerste dag was ik heel hard geschrokken van de snelheid waarmee ik mijn portie van de maaltijden op het bord moest leggen, maar na een aantal dagen begon dit beter te gaan en kon ik gemakkelijker volgen.</p>
         </div>
         <img src="assets/images/ervaringen.png" alt="">
     </section>
