Clarification keuze JSON

--- a/opbouw.html
+++ b/opbouw.html
@@ -46,7 +46,8 @@
 
         <h2>JSON</h2>
         <p>Zoals aangehaald in het hoofdstukje hierboven, wordt er gebruik gemaakt van JSON om de artikelen in te lezen. Alle belangrijke elementen hebben hun eigen parameters. Er is ook een optie voor een beschrijving toe te voegen aan de artikelen. Dit is een samenvatting van het artikel en dit wordt alleen weergegeven op het scherm met alle artikelen.</p>
-    
+        <p><i>Waarom op deze manier?</i><br>Ik heb gekozen voor een JSON-bestand omdat ik een manier wou kiezen die ook eenvoudig is voor niet-ITers. Als iemand mij zou vragen hoe zij het best dit kunnen implementeren op hun webiste, dan moeten ze geen HTML leren maar kunnen ze gewoon de tekst in het JSON-bestand toevoegen.</p>
+
         <h2>Hosting</h2>
         <p>Deze website is online toegankelijk met behulp van GitHub. Nadat ik een deel van de site heb toegevoegd of bijgewerkt stuur ik de code naar mijn GitHub repository. GitHub update dan automatisch de getoonde website.
         <br>Tijdens het bewerken gebruikte ik <code>py -m http.server</code> om lokaal een website te hosten. Zo moest ik niet na elke kleine aanpassing de code op GitHub plaatsen om de veranderingen te zien. Dit was nodig omdat ik de artikelen anders niet kon lezen.
