change ucdp manier

--- a/ucdp.html
+++ b/ucdp.html
@@ -39,7 +39,7 @@
 
         <a href="/assets/UCDP.pdf" download="Paper Perlin Noise"><button class="btn-ucdp" id="btn-ucdp"><i class="fa fa-download"></i> Download</button></a>
 
-        <object data="/assets/UCDP.pdf#view=FitV"></object>
+        <embed src="/assets/UCDP.pdf#view=FitV" type="application/pdf"></embed>
 
     </article>
 
