--- a/artikelen.html
+++ b/artikelen.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <p>Artikels</p>
+    <p>Artikelen</p>
     <p><a href="index.html">Jarno Vandeburie</a></p>
 </header>
 
