--- a/endare.html
+++ b/endare.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/filtermenu.css" />
     <link rel="stylesheet" href="assets/css/endare.css" />
+    <link rel="stylesheet" href="assets/css/carousel.css" />
     <title>Endare</title>
 </head>
 
@@ -29,31 +30,89 @@
         <p><a href="index.html">Jarno Vandeburie</a></p>
     </header>
 
-    <main>
-        <div>
-            <div>
-                <h1>Opdracht 1</h1>
-                <h2>Voorzie chatbot van style.</h2>
-                <p>
-                    Als eerste, inleidende opdracht kreeg ik toegang tot een vue project van een chatbot. De webpagina
-                    was
-                    nog niet voorzien van css en gebruikte bootstrap-vue.
-                    Alsook de paginas met de resultaten en het transcript moesten omgevormd worden.
-                    <br>
-                    Mijn taak was om de webpagina te voorzien van de vooropgestelde stijl. De berichten scrollt
-                    automatisch
-                    naar beneden wanneer er een nieuw bericht is en de textarea voor het antwoord vergroot wanneer de
-                    tekst
-                    meerdere lijnen opneemt.
-                </p>
+    <nav class="scrollbar">
+        <ul>
+            <li><a href="#opdracht1">AI chatbot</a></li>
+            <li><a href="#opdracht2">Lorem Ipsum</a></li>
+        </ul>
+    </nav>
 
-                <img src="assets/images/stage_endare/chatbot.png">
+    <main>
+        <div class="opdracht">
+            <div id="opdracht1">
+                <h1>Opdracht 1 - AI chatbot</h1>
+
+                <div class="carousel">
+                    <div class="carousel-item">
+                        <h2>Voorzie chatbot van style.</h2>
+                        <div>
+                            <div>
+                                <p>
+                                    Als eerste, inleidende opdracht kreeg ik toegang tot een vue project van een
+                                    chatbot. De
+                                    webpagina
+                                    was
+                                    nog niet voorzien van css en gebruikte bootstrap-vue.
+                                    Alsook de paginas met de resultaten en het transcript moesten omgevormd worden.
+                                    <br>
+                                    Mijn taak was om de webpagina te voorzien van de vooropgestelde stijl. <br>
+                                    De berichten scrollt automatisch naar beneden wanneer er een nieuw bericht is en de
+                                    textarea
+                                    voor
+                                    het antwoord vergroot wanneer de tekst meerdere lijnen opneemt.
+                                </p>
+                            </div>
+
+                            <img id="chatbot-img1" src="assets/images/stage_endare/chatbot.png">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div>
+                            <h2>Maak de site responsive</h2>
+                            <p>Verder is de site ook volledig responsive. Det heb ik gedaan met view width en view
+                                height
+                                maar ook
+                                met mediaqueries.</p>
+                        </div>
+                        <div class="horizontal-spread">
+                            <img src="assets/images/stage_endare/chatbot_resolutie2.PNG" width="1000">
+                            <img src="assets/images/stage_endare/chatbot_resolutie1.PNG" height="700">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="opdracht">
+            <div id="opdracht2">
+                <h1>Opdracht 2 - Lorem Ipsum</h1>
+
+                <div class="carousel">
+                    <div class="carousel-item">
+                        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
+                        <div>
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, iste aperiam
+                                    voluptatibus quis natus esse?. <br>
+                                    Nam, excepturi saepe ab ad, ratione rerum quaerat eaque minus quam tempore harum,
+                                    quo nisi?
+
+                                </p>
+                            </div>
+
+                            <img src="assets/images/stage_endare/chatbot.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 
 <script src="assets/javascript/generateSidebarMenu.js"></script>
 <script src="assets/javascript/require.js"></script>
+<script src="assets/javascript/carousel.js"></script>
 
 </html>
