--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <p>In het secundair ben ik begon in de richting Latijn in het Rhizo College van Zwevegem, maar al snel merkte ik dat dit niets voor mij was en zette ik de stap naar Moderne Wetenschappen. Twee jaar later was de keuze voor Wiskunde Wetenschappen snel gemaakt want wiskunde sprak mij veel meer aan dan economie</p>
             <p>Toen ik in het 5e secundair naar het Guldensportencollege Kaai in Kortrijk trok, besloot ik dat ik me meer wou verdiepen in de informatica en ben ik Informaticabeheer beginnen te studeren. Dit was een richting die mij direct lag en boeide.</p>
             <p>Nadat ik die studies had afgerond besloot ik om verder te studeren. In Howest Brugge sprak de richting Toegepaste Informatica mij hard aan. Na een eerste opleidingsjaar om de basis te leren, moest ik nog een keuze maken. Ik twijfelde heel hard tussen Software Engineer en Cyber Security Professional, maar ik koos uiteindelijk voor Cyber Security.</p>
+            <p>Na de studie in Howest bleef ik met een knagend gevoel zitten omdat ik mij afvroeg hoe ik het in de richting Software Development gedaan zou hebben. Daarom heb ik besloten om in Vives Kortrijk een verkort traject te volgen in Applicatieontwikkeling.</p>
         </div>
         <img src="assets/images/studies.png" alt="">
     </section>
@@ -56,7 +57,7 @@
             <h1>Ervaringen</h1>
             <h2>Stages</h2>
             <p>Mijn eerste stage heb ik gevolgd bij <a href="https://exsited.be" target="_blank">Exsited</a>. Hier heb ik voornamelijk geholpen bij het aanpassen van bestaande websites, maar ook het maken van een website aan de hand van een Adobe XD template die was opgesteld door de designer</p>
-            <p>Momenteel volg ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren.</p>
+            <p>Hierna volgde ik stage bij <a href="https://www.sofatech.be/nl/home" target="_blank">Sofatech</a> in Houthulst, West-Vlaanderen. Hier ben ik aangesteld voor de optimalisatie van de tools die gebruikt worden om alles te monitoren. Mijn hoofdtaak was de Zabbix en Grafana loskoppelen van de Docker waarop ze draaiden. Deze plaatste ik op een lokale Linux server en updatte naar de nieuwste LTS versie.</p>
             <h2>Vakantiejobs</h2>
             <p>Op mijn 16e ging opdienen in <a href="https://www.uilenspiegel-zwevegem.be" target="_blank">De Uilenspiegel</a>. Ik heb dit een aantal maanden gedaan in de weekends en ook op weekdagen tijdens lesvrije weken.</p>
             <p>In de zomer heb ik een maand bij Bemoran BVBA gewerkt. Dit is een bedrijf in de bouw gespecialiseerd in zaken zoals terassen, voetpaden, parkings... Dit was fysiek een heel zware maand want ik had het toch een beetje onderschat. Door de combinatie van het lange, harde werk en de temperatuur die tot 35°C steeg, was ik toch opgelucht als de werkdag voorbij was.</p>
